# lawn-care-pro-custom

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.planning/: ROADMAP.md
.planning/phases/01-docker-dev/: 01-docker-dev-PLAN.md  01-docker-dev-SUMMARY.md
.planning/phases/02-route-optimization/: 02-route-optimization-01-PLAN.md  02-route-optimization-01-SUMMARY.md  02-route-optimization-02-PLAN.md  02-route-optimization-02-SUMMARY.md
docs/plans/: 2026-03-09-field-tech-mobile-interface-design.md  2026-03-09-route-optimization-design.md  2026-03-09-route-optimization.md
frappe_docker/: .gitignore-dev  README-dev.md  docker-compose.dev.yaml
frappe_docker/scripts/: create-site.sh  install-app.sh  setup.sh
frappe_docker/workspace/: lawn_care_pro
lawn_care_pro/: hooks.py
lawn_care_pro/lawn_care_pro/: hooks.py  modules.txt  patches.txt  pyproject.toml  requirements.txt
lawn_care_pro/lawn_care_pro/fixtures/: client_script.json
lawn_care_pro/lawn_care_pro/lawncarepro/doctype/field_checkin/: field_checkin.json  field_checkin.py
lawn_care_pro/lawn_care_pro/lawncarepro/doctype/job_schedule/: job_schedule.json  job_schedule.py
lawn_care_pro/lawn_care_pro/lawncarepro/doctype/property/: property.json  property.py
lawn_care_pro/lawn_care_pro/lawncarepro/doctype/service_plan/: service_plan.json  service_plan.py
lawn_care_pro/lawn_care_pro/lawncarepro/page/route_map/: route_map.html  route_map.js  route_map.json  route_map.py
lawn_care_pro/lawn_care_pro/public/js/: job_schedule_list.js
lawn_care_pro/lawncarepro/doctype/field_checkin/: field_checkin.json  (+1 more)
(+8 files in other folders)
