[project]
name = "lawn_care_pro"
version = "0.0.1"
description = "Lawn Care CRM - Property Management, Scheduling, Field Service"
authors = ["LawnCare Pro <support@lawncarepro.com>"]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"
